Hot Fix homepage

--- a/GameHubCSharp/Views/Admin/AdminHome.cshtml
+++ b/GameHubCSharp/Views/Admin/AdminHome.cshtml
@@ -197,7 +197,7 @@
                 <tr>
                     <th scope="row">@i</th>
                     <td>@cur.Id</td>
-                    <td>@cur.GameId.GameName</td>
+                    <td>@cur.Game.GameName</td>
                     <td><button id="logout-button" class="bg-danger text-white p-2" onclick="location.href = '/Admin/DeleteEvent/@cur.Id?deleteType=@cur.GetType().Name'">Delete</button></td>
 
                 </tr>
